--- a/_client/public/manifest.json
+++ b/_client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Продажа автомобилей",
+  "name": "Продажа автомобилей",
   "icons": [
     {
       "src": "favicon.ico",
